Here's the commented version of the code snippet:

```c++
# Copyright 2017 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""An example gRPC Python-using application's common code elements."""

# Import protocol buffer message definitions for requests and services
from tests.testing.proto import requests_pb2
from tests.testing.proto import services_pb2

# Service and method name constants for gRPC testing
SERVICE_NAME = "tests_of_grpc_testing.FirstService"
UNARY_UNARY_METHOD_NAME = "UnUn"            # Unary request -> Unary response
UNARY_STREAM_METHOD_NAME = "UnStre"         # Unary request -> Stream response
STREAM_UNARY_METHOD_NAME = "StreUn"         # Stream request -> Unary response
STREAM_STREAM_METHOD_NAME = "StreStre"      # Stream request -> Stream response

# Request and response message definitions for different RPC patterns

# Unary-Unary RPC messages
UNARY_UNARY_REQUEST = requests_pb2.Up(first_up_field=2)
ERRONEOUS_UNARY_UNARY_REQUEST = requests_pb2.Up(first_up_field=3)
UNARY_UNARY_RESPONSE = services_pb2.Down(first_down_field=5)
ERRONEOUS_UNARY_UNARY_RESPONSE = services_pb2.Down(first_down_field=7)

# Unary-Stream RPC message
UNARY_STREAM_REQUEST = requests_pb2.Charm(first_charm_field=11)

# Stream-Unary RPC messages
STREAM_UNARY_REQUEST = requests_pb2.Charm(first_charm_field=13)
STREAM_UNARY_RESPONSE = services_pb2.Strange(first_strange_field=17)

# Stream-Stream RPC messages
STREAM_STREAM_REQUEST = requests_pb2.Top(first_top_field=19)
STREAM_STREAM_RESPONSE = services_pb2.Bottom(first_bottom_field=23)
TWO_STREAM_STREAM_RESPONSES = (STREAM_STREAM_RESPONSE,) * 2  # Tuple of two identical responses

# Special messages for abort testing
ABORT_REQUEST = requests_pb2.Up(first_up_field=42)
ABORT_SUCCESS_QUERY = requests_pb2.Up(first_up_field=43)
ABORT_NO_STATUS_RESPONSE = services_pb2.Down(first_down_field=50)
ABORT_SUCCESS_RESPONSE = services_pb2.Down(first_down_field=51)
ABORT_FAILURE_RESPONSE = services_pb2.Down(first_down_field=52)

# Messages for stream mutation testing
STREAM_STREAM_MUTATING_REQUEST = requests_pb2.Top(first_top_field=24601)
STREAM_STREAM_MUTATING_COUNT = 2  # Number of expected mutations

# Timeout setting for infinite request stream tests
INFINITE_REQUEST_STREAM_TIMEOUT = 0.2  # Timeout in seconds
```

The comments provide:
1. File purpose and license information
2. Explanation of imports
3. Description of service and method name constants
4. Documentation for each message type and its purpose
5. Explanation of special test cases (abort, mutation)
6. Clarification of timeout value
7. Notes about RPC patterns (unary/stream combinations)

The comments are structured to help developers understand:
- The overall context of the testing framework
- The purpose of each constant
- The relationship between different message types
- Special testing scenarios being supported